--- a/src/input.css
+++ b/src/input.css
@@ -23,25 +23,28 @@
 
   /* Header */
   .header {
-    @apply grid lg:grid-cols-2 justify-center lg:justify-between items-center mt-10 p-10;
+    @apply w-full h-auto p-10;
   }
-  .text {
-    @apply w-full;
+  .image_1 {
+    @apply w-full h-[656px] p-4 rounded-md bg-center bg-no-repeat bg-cover;
   }
-  .card-container {
-    @apply grid lg:grid-cols-3 lg:justify-between gap-2 justify-center mt-5;
+  .text_header {
+    @apply flex flex-col gap-5;
   }
-  .card-container .cards {
-    @apply w-[350px] lg:w-[200px] lg:h-[150px] h-[100px] border border-slate-900 rounded-md overflow-hidden;
+  .title_header {
+    @apply font-bold text-gray-900 text-[56px] leading-[56px] -tracking-[5px];
   }
-  .card-container .cards-2 {
-    @apply w-[350px] lg:w-auto lg:h-[305px] h-48 border border-slate-900 rounded-md overflow-hidden lg:col-span-2;
+  .btn_header {
+    @apply w-48 px-3 py-3 text-center text-white bg-gray-900 rounded-full uppercase text-sm font-thin;
   }
-  .cards .card {
-    @apply w-full h-[200%];
+  .image_container {
+    @apply p-2 border border-black overflow-x-auto;
   }
-  .card_img {
-    @apply w-full h-full object-cover;
+  .image_2 {
+    @apply w-[211px] h-[189px] p-2 rounded-md bg-no-repeat bg-cover bg-center;
+  }
+  .title_bg {
+    @apply font-bold text-[32px] leading-[32px] -tracking-[3px];
   }
 
   /* About */
@@ -49,7 +52,30 @@
     @apply flex flex-col gap-5 justify-center items-center;
   }
   .title {
-    @apply bg-white border-4 border-black py-3 px-4;
+    @apply bg-white border-4 border-gray-900 py-3 px-4;
+  }
+
+  /* Values */
+  .value {
+    @apply w-full h-auto p-10;
+  }
+  .why {
+    @apply text-gray-900 font-bold text-[35px] text-left;
+  }
+  .card_value_container {
+    @apply flex flex-col justify-center items-center gap-4 md:flex-row md:justify-between mt-4;
+  }
+  .card_value {
+    @apply flex w-full h-auto p-5 justify-center flex-col items-center border-2 border-gray-900 rounded-md gap-3;
+  }
+  .card_value .icon_value {
+    @apply h-14 w-14 bg-gray-900 rounded-full text-gray-100 flex items-center justify-center;
+  }
+  .text_header {
+    @apply mt-2;
+  }
+  .text_header .title_value {
+    @apply font-bold text-gray-900 text-xl text-center;
   }
 
   /* Product */
@@ -60,27 +86,27 @@
     @apply grid justify-center items-center grid-cols-2 md:grid-cols-5 gap-2;
   }
   .product_item {
-    @apply bg-black border-2 border-black text-white hover:bg-white hover:text-black hover:cursor-pointer transition-all duration-300 py-3 px-4 text-center;
+    @apply bg-gray-900 border-2 border-gray-900 text-white hover:bg-white hover:text-gray-900 hover:cursor-pointer transition-all duration-300 py-3 px-4 text-center;
+  }
+  .aktive {
+    @apply bg-white text-gray-900 border-gray-900 border-2;
   }
   .product-card {
     @apply grid grid-cols-2 md:grid-cols-4 gap-2 md:gap-3 mt-5;
   }
-  .card_item {
-    @apply bg-white border border-gray-200 rounded-xl shadow-lg p-6 max-w-xs mx-auto transition-transform hover:transform hover:scale-105;
+  .card_container {
+    @apply max-w-xs bg-white rounded-lg shadow-md overflow-hidden transform transition-transform hover:scale-105 hover:shadow-xl duration-300 ease-in-out;
   }
-  .card_item img {
-    @apply w-full h-auto rounded-lg mb-4;
+  .card_container.hide {
+    @apply hidden;
   }
-  .card_item .desc {
-    @apply text-gray-600 text-sm text-center mb-6 line-clamp-3;
+  .card_container .card_img {
+    @apply w-full h-64 object-cover transform hover:scale-105 transition-transform duration-300 ease-in-out;
   }
-  .card_item .button {
-    @apply flex justify-between items-center gap-4 w-full;
+  .card_name {
+    @apply text-gray-900 font-semibold text-lg;
   }
-  .button .buy_icon {
-    @apply flex items-center justify-center bg-gray-800 text-white py-2 px-4 rounded-lg transition-colors hover:bg-gray-600 flex-shrink-0 w-1/3;
-  }
-  .button .buy_btn {
-    @apply bg-gray-800 text-white py-2 px-4 rounded-lg transition-colors hover:bg-gray-600 w-full text-center;
+  .card_btn {
+    @apply mt-4 w-full bg-gray-900 text-white py-2 rounded-lg hover:bg-gray-700;
   }
 }
