--- a/src/output.css
+++ b/src/output.css
@@ -9263,6 +9263,81 @@ html:has(.drawer-open.drawer-open) {
   }
 }
 
+.header_2 {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  justify-content: space-between;
+  gap: 0.75rem;
+  padding: 1.25rem;
+}
+
+.header_2 .text {
+  display: flex;
+  height: 360px;
+  width: 375px;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2rem;
+}
+
+@media (min-width: 768px) {
+  .header_2 .text {
+    height: 380px;
+    width: 411px;
+  }
+}
+
+.btn_browse {
+  width: 280px;
+  border-radius: 9999px;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  text-align: center;
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.btn_browse:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.img_header2 {
+  display: none;
+  height: 380px;
+  width: 479px;
+  align-items: flex-end;
+  justify-content: space-between;
+  border-radius: 0.5rem;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 1.25rem;
+}
+
+@media (min-width: 1024px) {
+  .img_header2 {
+    display: flex;
+  }
+}
+
+.title_bg_header {
+  font-size: 40px;
+  line-height: 40px;
+  letter-spacing: -3px;
+}
+
 /* About */
 
 .about {
@@ -9650,6 +9725,10 @@ html:has(.drawer-open.drawer-open) {
 
 .z-50 {
   z-index: 50;
+}
+
+.col-span-2 {
+  grid-column: span 2 / span 2;
 }
 
 .float-start {
@@ -10523,6 +10602,10 @@ html:has(.drawer-open.drawer-open) {
   justify-items: stretch;
 }
 
+.gap-3 {
+  gap: 0.75rem;
+}
+
 .gap-8 {
   gap: 2rem;
 }
@@ -11130,6 +11213,14 @@ html:has(.drawer-open.drawer-open) {
   background-color: rgb(255 255 255 / 0.5);
 }
 
+.bg-\[url\(\'\.\/\.\.\/assets\/img\/header\/bg-header2-1\.jpg\'\)\] {
+  background-image: url('./../assets/img/header/bg-header2-1.jpg');
+}
+
+.bg-\[url\(\'\.\/\.\.\/assets\/img\/header\/bg-header2-2\.jpg\'\)\] {
+  background-image: url('./../assets/img/header/bg-header2-2.jpg');
+}
+
 .bg-\[url\(\'\.\/\.\.\/assets\/img\/header\/image-outdoor\.png\'\)\] {
   background-image: url('./../assets/img/header/image-outdoor.png');
 }
@@ -11405,6 +11496,10 @@ html:has(.drawer-open.drawer-open) {
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
+}
+
+.text-\[18px\] {
+  font-size: 18px;
 }
 
 .text-lg {
@@ -12491,6 +12586,10 @@ html:has(.drawer-open.drawer-open) {
   .md\:px-12 {
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .md\:text-\[65px\] {
+    font-size: 65px;
   }
 }
 
