--- a/src/input.css
+++ b/src/input.css
@@ -137,6 +137,12 @@
    */
 
   .btn_filter {
-    @apply bg-gray-900 rounded-full py-3 px-4 absolute flex justify-between gap-2 text-white right-2;
+    @apply bg-gray-900 rounded-full py-3 px-4 flex lg:hidden justify-between gap-2 text-white fixed right-2 bottom-7 z-30;
+  }
+  .filter_mobile {
+    @apply fixed flex lg:hidden flex-col gap-3 w-full m-auto overflow-hidden h-auto lg:w-1/4 p-6 bg-white rounded-lg border border-gray-200  z-30 transition-all duration-300;
+  }
+  .overlay {
+    @apply w-full h-full bg-black fixed inset-0 z-20 transition-all duration-300;
   }
 }
